------------------------------------------------------
Version 1.10.2 - 2.2.24
------------------------------------------------------
Additions
- None

Changes
- Update chinese translation file (thanks CNife)

Bug Fixes
- ExUtils compat fixed (RWTema changed to a lowercase modID, so I had to fix that in my code)
------------------------------------------------------
Version 1.10.2 - 2.2.23
------------------------------------------------------
Additions
- None

Changes
- Much improved the Chinese translation file (thanks CNife).

Bug Fixes
- Verified the backpack stays with the player through death/gravestones when it should.
- Fix typo in lang file.
------------------------------------------------------
Version 1.10.2 - 2.2.22
------------------------------------------------------
Additions
- None

Changes
- Added back in the tiny bug where right clicking sometimes 'persists' through packs, picking up the underlying stack. Deemed minor enough, as re-enabling right click to open directly is much better.

Bug Fixes
- Fixed not being able to right click from 'e' inventory.
- Fixed improper scaling of JEI pages for higher resolutions/small GUI sizes.
------------------------------------------------------
Version 1.10.2 - 2.2.21
------------------------------------------------------
Additions
- None

Changes
- Unequipping a backpack is more intelligent.
    - See the link for details on how it works: https://github.com/gr8pefish/IronBackpacks/blob/6c84f630e829bba0553768e1d45a56f0386b5ade/src/main/java/gr8pefish/ironbackpacks/util/helpers/IronBackpacksHelper.java#L179-L189
- Removed ability to shift right click with an equipped backpack to deposit immediately. (Hard to do code-wise, and it is now very easy to unequip and deposit, then reequip)

Bug Fixes
- Fixed recipe mirroring conflict making decompression upgrade uncraftable.
- Fixed right click to open backpacks directly persisting and causing you to pick up a half stack of an item occasionally.